@@ -1,5 +1,5 @@
 <?lsmb INCLUDE "ui-header.html" ?>
-<body id="use_overpayment1">
+<body id="use_overpayment1" class="<?lsmb dojo_theme ?>">
 <form name="search" method="post" action="payment.pl">
   <?lsmb PROCESS elements.html  # Include form elements helper. -?>
   <?lsmb login.type = 'hidden' ; INCLUDE input element_data=login -?>
